# nvim

./: .buildinfo  .editorconfig  .gitignore  .luacheckrc  .nvimlog  DEVELOPMENT.md  LAZY_LOAD_GUIDE.md  Makefile  README.md  customization.html  development.html  full_setup.txt  fzf_guide.html  genindex.html  index.html  init.lua  install.py  install_script.html  installation.html  keybindings.html  lazy-lock.json  lsp_configuration.html  lsp_features.html  objects.inv  plugins.html  project_philosophy.html  pyproject.toml  python_dependencies.html  python_workflow.html  quickstart.html  requirements.html  search.html  searchindex.js  structure.html  troubleshooting.html  workflows.html
.doctrees/: customization.doctree  development.doctree  environment.pickle  fzf_guide.doctree  index.doctree  install_script.doctree  installation.doctree  keybindings.doctree  lsp_configuration.doctree  lsp_features.doctree  plugins.doctree  project_philosophy.doctree  python_dependencies.doctree  python_workflow.doctree  quickstart.doctree  requirements.doctree  structure.doctree  troubleshooting.doctree  workflows.doctree
.github/: dependabot.yml
_sources/: install_script.rst.txt  installation.rst.txt  keybindings.rst.txt  lsp_features.rst.txt  project_philosophy.rst.txt  python_workflow.rst.txt  workflows.rst.txt
docs/: conf.py  customization.rst  fzf_guide.rst  index.rst  install_script.rst  installation.rst  keybindings.rst  plugins.rst  quickstart.rst  requirements.rst  structure.rst  troubleshooting.rst
lua/: autocmds.lua  settings.lua  statusline.lua  utils.lua
(+37 files in other folders)
